exercices obligatoires fonctionnels

--- a/stylesaleth.css
+++ b/stylesaleth.css
@@ -1,6 +1,14 @@
-bady{
-	margin: 0;
-	padding: 0;
+body{
+	margin: 0px 50px 0 0;
+	padding: 20px 20px 0 0;
+
+}
+section {
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	margin-bottom: 50px;
 }
 h1 {background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
 		background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
